# pyloglog

./: .gitignore  Makefile  README.md  pyproject.toml
src/pyloglog/: counting.py
tests/: test_counting.py
