[project]
name = "pyloglog"
version = "0.1.0"
description = ""
authors = [
    {name = "Dr. Nobel Khandaker",email = "nobel@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8 (>=7.2.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "pyloglog", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
